--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -957,6 +957,7 @@ main.texte a{
     animation-fill-mode: forwards;
     visibility: hidden;
     z-index: 5000;
+    overflow: auto;
 }
 
 #newsletter.open{
