--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1810,6 +1810,8 @@ main.grid .tile a h2{
 	}
 
 	#mobile-menu,
+	#search-newsletter,
+	.fullscreen-link,
 	#btn-newsletter,
 	#newsletter,
 	.map,
