--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,6 +477,55 @@ p+p{
 	margin-top: 1rem;
 }
 
+.footnotes-container{
+	margin-top: 1rem;
+}
+.footnotes-list{
+	list-style: decimal;
+	list-style-position: inside;
+}
+sup.footnote{
+	background: #fff;
+	color: #000;
+	width: .75rem;
+	height: .75rem;
+	border-radius: .5rem;
+	display: inline-block;
+	position: relative;
+	bottom: .5rem;
+	margin-left: .1rem;
+}
+sup.footnote a{
+	width: .75rem;
+	height: .75rem;
+	display: flex;
+	text-decoration: none;
+	font-size: .6rem;
+	outline: none;
+	justify-content: center;
+	align-items: center;
+}
+
+span.footnotereverse{
+	width: .75rem;
+	height: .75rem;
+	border-radius: .5rem;
+	display: inline-block;
+	position: relative;
+	bottom: .25rem;
+}
+
+span.footnotereverse a{
+	width: .8rem;
+	height: .8rem;
+	display: flex;
+	text-decoration: none;
+	font-size: .6rem;
+	outline: none;
+	justify-content: center;
+	align-items: center;
+}
+
 
 .related-cases{
 	display: flex;
