--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,25 +492,30 @@ p+p{
 
 
 sup.footnote{
-	background: #fff;
-	color: #000;
-	width: .75rem;
-	height: .75rem;
+	background: #000;
+	color: #fff;
+	width: .9rem;
+	height: .9rem;
 	border-radius: .5rem;
+	border: solid 1px #fff;
 	display: inline-block;
 	position: relative;
 	bottom: .5rem;
 	margin-left: .1rem;
 }
 sup.footnote a{
-	width: .75rem;
-	height: .75rem;
+	width: .9rem;
+	height: .9rem;
 	display: flex;
 	text-decoration: none;
 	font-size: .6rem;
 	outline: none;
 	justify-content: center;
 	align-items: center;
+	position: relative;
+	bottom: 1px;
+	right: 1px;
+	padding: 0;
 }
 
 span.footnotereverse{
@@ -2184,6 +2189,10 @@ main.grid .tile a h2{
 	}
 	.text .footnotereverse a{
 		display: none;
+	}
+	.text .footnotes-list{
+		font-size: .8em;
+		line-height: 1.15em;
 	}
 
 	.text #contact a img{
