update style (hide social media on mobile paysage)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1544,6 +1544,10 @@ main.grid .tile a h2{
 		transition-timing-function: ease;
 	}
 
+	#title>.social-media {
+		display: none;
+	}
+
 	#title #mobile-menu>.social-media{
 		display: block;
 		background: #fff;
